создане экранов  есть ошибка, вылетает

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -156,6 +156,7 @@
     <string name="uroven_geroi">Уровень персонажа</string>
     <string name="karta">Карта</string>
     <string name="pokazateli_zizni">Жизненные показатели</string>
+    <string name="v_poiskah_istina_kvest">В ПОИСКАХ ИСТИНЫ</string>
 
 
 </resources>
