создание экрана ваз2101

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -16,7 +16,7 @@
     <string name="bav485">БАВ-485</string>
     <string name="kraz255">КрАЗ-255</string>
     <string name="mi8">Ми-8</string>
-    <string name="polar_atv">Арктический вездеход</string>
+    <string name="polar_atv">Вездеход</string>
     <string name="raft">Плот</string>
     <string name="motorboat">Моторная лодка</string>
     <string name="belaz">БелАЗ</string>
