--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -256,6 +256,8 @@
     <string name="rashod_6_100">6l/100km</string>
     <string name="motocycle_parts">Motocycle parts</string>
     <string name="brodjaga_metod_polucenia">Only purchase in the play store - 500 caps</string>
+    <string name="bint">Sterile bandage</string>
+    <string name="podoriznik">Broadleaf plantain</string>
 
 
 </resources>
