--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -164,6 +164,14 @@
     <string name="brodjaga_metod_polucenia">Только покупка в игровом магазине - 500 крышек</string>
     <string name="bint">Бинт</string>
     <string name="podoriznik">Подорожник</string>
+    <string name="bint_description">"Бинт стерильный — медикамент, необходимый для устранения последствий ранений. Применяется для восстановление здоровья.
+Лечение ворона, волка, песца. Лечение раненых людей в некоторых квестах поселения. "</string>
+    <string name="kg_14">14кг</string>
+    <string name="zdorovie">Здоровье</string>
+    <string name="bint_metod_polucenia">Можно найти:\nв аптеке;\nв поликлинике;\nв спортзале школы;\nв палатах и аптеке больницы;\nв лазарете воинской части;
+        \nв палаточном лагере;\nна блокпосту;\nв заражённой поликлинике;\nв заражённом сквере;\nв заражённой аптеке.\nНайти в лазарете большой базы бандитов после зачистки сектора от врагов.
+        \nОбыскивая скелеты врачей.\nОбыскивая трупы безумцев, мародёров, бандитов.\nМожет принести ворон, если отправить его за медикаментами.\nМожет принести песец, если отправить его что-нибудь украсть.\nСоздать самостоятельно.</string>
+    <string name="trapka">Тряпьё</string>
 
 
 </resources>
