dobavlenie tehniki i medicini

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -170,8 +170,24 @@
     <string name="zdorovie">Здоровье</string>
     <string name="bint_metod_polucenia">Можно найти:\nв аптеке;\nв поликлинике;\nв спортзале школы;\nв палатах и аптеке больницы;\nв лазарете воинской части;
         \nв палаточном лагере;\nна блокпосту;\nв заражённой поликлинике;\nв заражённом сквере;\nв заражённой аптеке.\nНайти в лазарете большой базы бандитов после зачистки сектора от врагов.
-        \nОбыскивая скелеты врачей.\nОбыскивая трупы безумцев, мародёров, бандитов.\nМожет принести ворон, если отправить его за медикаментами.\nМожет принести песец, если отправить его что-нибудь украсть.\nСоздать самостоятельно.</string>
+        \nОбыскивая скелеты врачей.\nОбыскивая трупы безумцев, мародёров, бандитов.\nМожет принести ворон, если отправить его за медикаментами.\nМожет принести песец, если отправить его что-нибудь украсть.\nСоздать самостоятельно в лагере.</string>
     <string name="trapka">Тряпьё</string>
+    <string name="kg_955">955кг</string>
+    <string name="vaz2101_razobran"> ВАЗ-2101 \"Разобранный\"</string>
+    <string name="kmh_25">25км/ч</string>
+    <string name="rashod_11_100">11л/100км</string>
+    <string name="procnost">Прочность</string>
+    <string name="rashod_9_100">9л/100км</string>
+    <string name="sozdanie">СОЗДАНИЕ</string>
+    <string name="voda_cistaja">Чистая вода</string>
+    <string name="ogon">Огонь</string>
+    <string name="vremja_sozdanija">Время создания</string>
+    <string name="min_3">3мин</string>
+    <string name="podoroznik_description">Подорожник — лекарственное растение, которое в неограниченных количествах можно найти на открытых пространствах пустоши (равнинах). Является хорошим средством для восстановления здоровья, так как не имеет никаких побочных воздействий. Применяется для создания лечебной мази.</string>
+    <string name="gr_10">10гр</string>
+    <string name="srok_godnosti">Срок годности</string>
+    <string name="day_14">14 дней</string>
+    <string name="podoroznik_metod_polucenia">Можно найти в пустоши, на дороге</string>
 
 
 </resources>
