--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,6 +297,16 @@ Treatment of a raven, wolf, and arctic fox. Treatment of injured people in some 
     <string name="srok_godnosti">Expiration date</string>
     <string name="day_14">14 days</string>
     <string name="podoroznik_metod_polucenia">Can be found in the wasteland</string>
+    <string name="lisicka">Chanterelle</string>
+    <string name="lisicka_description">Chanterelle is an edible mushroom that is used to create some medicines and in some food recipes. It can be eaten raw, but it is better to fry it first. Used in - Cleansing decoction, fried chanterelle, pasta with mushrooms, mushroom soup.</string>
+    <string name="gr_200">200gr</string>
+    <string name="eda">Food</string>
+    <string name="radiacia">Radiation</string>
+    <string name="ocki_minus_1" translatable="false">-1</string>
+    <string name="otravlenie">Food poisoning</string>
+    <string name="procent_10" translatable="false">10%</string>
+    <string name="lisicka_metod_polucenia">Found in the forest. Can be brought by lazy elves and pumpkin dummies. Can be brought by the pet Pumpkin. Can be found in the Institute\'s greenhouses in infected cities (science cities).</string>
+    <string name="iventi">EVENTS</string>
 
 
 </resources>
