--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -196,6 +196,7 @@
     <string name="otravlenie">Пищевое отравление</string>
     <string name="lisicka_metod_polucenia">Найти в лесу. Могут принести ленивые эльфы и тыквенные болваны. Может принести питомец Тыковка. Можно найти в теплицах Института в заражённых городах(наукоградах).</string>
     <string name="iventi">ИВЕНТЫ</string>
+    <string name="pepsicola">Газировка</string>
 
 
 </resources>
