--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,6 +307,7 @@ Treatment of a raven, wolf, and arctic fox. Treatment of injured people in some 
     <string name="procent_10" translatable="false">10%</string>
     <string name="lisicka_metod_polucenia">Found in the forest. Can be brought by lazy elves and pumpkin dummies. Can be brought by the pet Pumpkin. Can be found in the Institute\'s greenhouses in infected cities (science cities).</string>
     <string name="iventi">EVENTS</string>
+    <string name="pepsicola">Soda</string>
 
 
 </resources>
